public class InstrumentSpec {
    private Builder builder;
    private String model;
    private Type type;
    private NumStrings numStrings;
    private Wood backWood;
    private Wood topWood;

    public InstrumentSpec() {
    }

    public InstrumentSpec (Builder builder, String model, Type type, NumStrings numStrings, Wood backWood, Wood topWood){
        this.builder = builder;
        this.model = model;
        this.type = type;
        this.numStrings = numStrings;
        this.backWood = backWood;
        this.topWood = topWood;
    }


    public Builder getBuilder() {
        return builder;
    }

    public String getModel() {
        return model;
    }

    public Type getType() {
        return type;
    }

    public NumStrings getNumStrings() {
        return numStrings;
    }

    public Wood getBackWood() {
        return backWood;
    }

    public Wood getTopWood() {
        return topWood;
    }

    public boolean matches(InstrumentSpec otherSpec) {
        if (builder != otherSpec.builder)
            return false;
        if ((model != null) && (!model.equals("")) && (!model.equals(otherSpec.model)))
            return false;

        if (type != otherSpec.type)
            return false;

        if (numStrings != otherSpec.numStrings)
            return false;

        if (backWood != otherSpec.backWood)
            return false   ;
        if (topWood != otherSpec.topWood)
            return false;
        return true;

    }



}
